parser/y.output

state 0
	$accept: .program_all $end 
	procedures: .    (4)

	.  reduce 4 (src line 108)

	program_all  goto 1
	procedures  goto 2

state 1
	$accept:  program_all.$end 

	$end  accept
	.  error


state 2
	program_all:  procedures.main 
	procedures:  procedures.PROCEDURE proc_head IS declarations BEGIN commands END 
	procedures:  procedures.PROCEDURE proc_head IS BEGIN commands END 

	PROCEDURE  shift 4
	PROGRAM  shift 5
	.  error

	main  goto 3

state 3
	program_all:  procedures main.    (1)

	.  reduce 1 (src line 79)


state 4
	procedures:  procedures PROCEDURE.proc_head IS declarations BEGIN commands END 
	procedures:  procedures PROCEDURE.proc_head IS BEGIN commands END 

	PIDENTIFIER  shift 7
	.  error

	proc_head  goto 6

state 5
	main:  PROGRAM.IS declarations BEGIN commands END 
	main:  PROGRAM.IS BEGIN commands END 

	IS  shift 8
	.  error


state 6
	procedures:  procedures PROCEDURE proc_head.IS declarations BEGIN commands END 
	procedures:  procedures PROCEDURE proc_head.IS BEGIN commands END 

	IS  shift 9
	.  error


state 7
	proc_head:  PIDENTIFIER.LPAREN args_decl RPAREN 

	LPAREN  shift 10
	.  error


state 8
	main:  PROGRAM IS.declarations BEGIN commands END 
	main:  PROGRAM IS.BEGIN commands END 

	BEGIN  shift 12
	PIDENTIFIER  shift 13
	.  error

	declarations  goto 11

state 9
	procedures:  procedures PROCEDURE proc_head IS.declarations BEGIN commands END 
	procedures:  procedures PROCEDURE proc_head IS.BEGIN commands END 

	BEGIN  shift 15
	PIDENTIFIER  shift 13
	.  error

	declarations  goto 14

state 10
	proc_head:  PIDENTIFIER LPAREN.args_decl RPAREN 

	T  shift 18
	PIDENTIFIER  shift 17
	.  error

	args_decl  goto 16

state 11
	main:  PROGRAM IS declarations.BEGIN commands END 
	declarations:  declarations.COMMA PIDENTIFIER 
	declarations:  declarations.COMMA PIDENTIFIER LBRACKET NUM COLON NUM RBRACKET 

	BEGIN  shift 19
	COMMA  shift 20
	.  error


state 12
	main:  PROGRAM IS BEGIN.commands END 

	IF  shift 24
	WHILE  shift 25
	REPEAT  shift 26
	FOR  shift 27
	READ  shift 29
	WRITE  shift 30
	PIDENTIFIER  shift 31
	.  error

	commands  goto 21
	command  goto 22
	identifier  goto 23
	proc_call  goto 28

state 13
	declarations:  PIDENTIFIER.    (23)
	declarations:  PIDENTIFIER.LBRACKET NUM COLON NUM RBRACKET 

	LBRACKET  shift 32
	.  reduce 23 (src line 270)


state 14
	procedures:  procedures PROCEDURE proc_head IS declarations.BEGIN commands END 
	declarations:  declarations.COMMA PIDENTIFIER 
	declarations:  declarations.COMMA PIDENTIFIER LBRACKET NUM COLON NUM RBRACKET 

	BEGIN  shift 33
	COMMA  shift 20
	.  error


state 15
	procedures:  procedures PROCEDURE proc_head IS BEGIN.commands END 

	IF  shift 24
	WHILE  shift 25
	REPEAT  shift 26
	FOR  shift 27
	READ  shift 29
	WRITE  shift 30
	PIDENTIFIER  shift 31
	.  error

	commands  goto 34
	command  goto 22
	identifier  goto 23
	proc_call  goto 28

state 16
	proc_head:  PIDENTIFIER LPAREN args_decl.RPAREN 
	args_decl:  args_decl.COMMA PIDENTIFIER 
	args_decl:  args_decl.COMMA T PIDENTIFIER 

	RPAREN  shift 35
	COMMA  shift 36
	.  error


state 17
	args_decl:  PIDENTIFIER.    (27)

	.  reduce 27 (src line 313)


state 18
	args_decl:  T.PIDENTIFIER 

	PIDENTIFIER  shift 37
	.  error


state 19
	main:  PROGRAM IS declarations BEGIN.commands END 

	IF  shift 24
	WHILE  shift 25
	REPEAT  shift 26
	FOR  shift 27
	READ  shift 29
	WRITE  shift 30
	PIDENTIFIER  shift 31
	.  error

	commands  goto 38
	command  goto 22
	identifier  goto 23
	proc_call  goto 28

state 20
	declarations:  declarations COMMA.PIDENTIFIER 
	declarations:  declarations COMMA.PIDENTIFIER LBRACKET NUM COLON NUM RBRACKET 

	PIDENTIFIER  shift 39
	.  error


state 21
	main:  PROGRAM IS BEGIN commands.END 
	commands:  commands.command 

	END  shift 40
	IF  shift 24
	WHILE  shift 25
	REPEAT  shift 26
	FOR  shift 27
	READ  shift 29
	WRITE  shift 30
	PIDENTIFIER  shift 31
	.  error

	command  goto 41
	identifier  goto 23
	proc_call  goto 28

state 22
	commands:  command.    (8)

	.  reduce 8 (src line 138)


state 23
	command:  identifier.ASSIGN expression SEMICOLON 

	ASSIGN  shift 42
	.  error


state 24
	command:  IF.condition THEN commands ELSE commands ENDIF 
	command:  IF.condition THEN commands ENDIF 

	NUM  shift 45
	PIDENTIFIER  shift 47
	.  error

	condition  goto 43
	value  goto 44
	identifier  goto 46

state 25
	command:  WHILE.condition DO commands ENDWHILE 

	NUM  shift 45
	PIDENTIFIER  shift 47
	.  error

	condition  goto 48
	value  goto 44
	identifier  goto 46

state 26
	command:  REPEAT.commands UNTIL condition SEMICOLON 

	IF  shift 24
	WHILE  shift 25
	REPEAT  shift 26
	FOR  shift 27
	READ  shift 29
	WRITE  shift 30
	PIDENTIFIER  shift 31
	.  error

	commands  goto 49
	command  goto 22
	identifier  goto 23
	proc_call  goto 28

state 27
	command:  FOR.PIDENTIFIER FROM value TO value DO commands ENDFOR 
	command:  FOR.PIDENTIFIER FROM value DOWNTO value DO commands ENDFOR 

	PIDENTIFIER  shift 50
	.  error


state 28
	command:  proc_call.SEMICOLON 

	SEMICOLON  shift 51
	.  error


state 29
	command:  READ.identifier SEMICOLON 

	PIDENTIFIER  shift 47
	.  error

	identifier  goto 52

state 30
	command:  WRITE.value SEMICOLON 

	NUM  shift 45
	PIDENTIFIER  shift 47
	.  error

	value  goto 53
	identifier  goto 46

state 31
	proc_call:  PIDENTIFIER.LPAREN args RPAREN 
	identifier:  PIDENTIFIER.    (45)
	identifier:  PIDENTIFIER.LBRACKET PIDENTIFIER RBRACKET 
	identifier:  PIDENTIFIER.LBRACKET NUM RBRACKET 

	LPAREN  shift 54
	LBRACKET  shift 55
	.  reduce 45 (src line 472)


state 32
	declarations:  PIDENTIFIER LBRACKET.NUM COLON NUM RBRACKET 

	NUM  shift 56
	.  error


state 33
	procedures:  procedures PROCEDURE proc_head IS declarations BEGIN.commands END 

	IF  shift 24
	WHILE  shift 25
	REPEAT  shift 26
	FOR  shift 27
	READ  shift 29
	WRITE  shift 30
	PIDENTIFIER  shift 31
	.  error

	commands  goto 57
	command  goto 22
	identifier  goto 23
	proc_call  goto 28

state 34
	procedures:  procedures PROCEDURE proc_head IS BEGIN commands.END 
	commands:  commands.command 

	END  shift 58
	IF  shift 24
	WHILE  shift 25
	REPEAT  shift 26
	FOR  shift 27
	READ  shift 29
	WRITE  shift 30
	PIDENTIFIER  shift 31
	.  error

	command  goto 41
	identifier  goto 23
	proc_call  goto 28

state 35
	proc_head:  PIDENTIFIER LPAREN args_decl RPAREN.    (19)

	.  reduce 19 (src line 229)


state 36
	args_decl:  args_decl COMMA.PIDENTIFIER 
	args_decl:  args_decl COMMA.T PIDENTIFIER 

	T  shift 60
	PIDENTIFIER  shift 59
	.  error


state 37
	args_decl:  T PIDENTIFIER.    (28)

	.  reduce 28 (src line 323)


state 38
	main:  PROGRAM IS declarations BEGIN commands.END 
	commands:  commands.command 

	END  shift 61
	IF  shift 24
	WHILE  shift 25
	REPEAT  shift 26
	FOR  shift 27
	READ  shift 29
	WRITE  shift 30
	PIDENTIFIER  shift 31
	.  error

	command  goto 41
	identifier  goto 23
	proc_call  goto 28

state 39
	declarations:  declarations COMMA PIDENTIFIER.    (21)
	declarations:  declarations COMMA PIDENTIFIER.LBRACKET NUM COLON NUM RBRACKET 

	LBRACKET  shift 62
	.  reduce 21 (src line 250)


state 40
	main:  PROGRAM IS BEGIN commands END.    (6)

	.  reduce 6 (src line 123)


state 41
	commands:  commands command.    (7)

	.  reduce 7 (src line 133)


state 42
	command:  identifier ASSIGN.expression SEMICOLON 

	NUM  shift 45
	PIDENTIFIER  shift 47
	.  error

	expression  goto 63
	value  goto 64
	identifier  goto 46

state 43
	command:  IF condition.THEN commands ELSE commands ENDIF 
	command:  IF condition.THEN commands ENDIF 

	THEN  shift 65
	.  error


state 44
	condition:  value.EQUALS value 
	condition:  value.NEQUALS value 
	condition:  value.GE value 
	condition:  value.LE value 
	condition:  value.GEQ value 
	condition:  value.LEQ value 

	EQUALS  shift 66
	NEQUALS  shift 67
	GE  shift 68
	LE  shift 69
	GEQ  shift 70
	LEQ  shift 71
	.  error


state 45
	value:  NUM.    (43)

	.  reduce 43 (src line 458)


state 46
	value:  identifier.    (44)

	.  reduce 44 (src line 466)


state 47
	identifier:  PIDENTIFIER.    (45)
	identifier:  PIDENTIFIER.LBRACKET PIDENTIFIER RBRACKET 
	identifier:  PIDENTIFIER.LBRACKET NUM RBRACKET 

	LBRACKET  shift 55
	.  reduce 45 (src line 472)


state 48
	command:  WHILE condition.DO commands ENDWHILE 

	DO  shift 72
	.  error


state 49
	commands:  commands.command 
	command:  REPEAT commands.UNTIL condition SEMICOLON 

	IF  shift 24
	WHILE  shift 25
	REPEAT  shift 26
	UNTIL  shift 73
	FOR  shift 27
	READ  shift 29
	WRITE  shift 30
	PIDENTIFIER  shift 31
	.  error

	command  goto 41
	identifier  goto 23
	proc_call  goto 28

state 50
	command:  FOR PIDENTIFIER.FROM value TO value DO commands ENDFOR 
	command:  FOR PIDENTIFIER.FROM value DOWNTO value DO commands ENDFOR 

	FROM  shift 74
	.  error


state 51
	command:  proc_call SEMICOLON.    (16)

	.  reduce 16 (src line 209)


state 52
	command:  READ identifier.SEMICOLON 

	SEMICOLON  shift 75
	.  error


state 53
	command:  WRITE value.SEMICOLON 

	SEMICOLON  shift 76
	.  error


state 54
	proc_call:  PIDENTIFIER LPAREN.args RPAREN 

	PIDENTIFIER  shift 78
	.  error

	args  goto 77

state 55
	identifier:  PIDENTIFIER LBRACKET.PIDENTIFIER RBRACKET 
	identifier:  PIDENTIFIER LBRACKET.NUM RBRACKET 

	NUM  shift 80
	PIDENTIFIER  shift 79
	.  error


state 56
	declarations:  PIDENTIFIER LBRACKET NUM.COLON NUM RBRACKET 

	COLON  shift 81
	.  error


state 57
	procedures:  procedures PROCEDURE proc_head IS declarations BEGIN commands.END 
	commands:  commands.command 

	END  shift 82
	IF  shift 24
	WHILE  shift 25
	REPEAT  shift 26
	FOR  shift 27
	READ  shift 29
	WRITE  shift 30
	PIDENTIFIER  shift 31
	.  error

	command  goto 41
	identifier  goto 23
	proc_call  goto 28

state 58
	procedures:  procedures PROCEDURE proc_head IS BEGIN commands END.    (3)

	.  reduce 3 (src line 99)


state 59
	args_decl:  args_decl COMMA PIDENTIFIER.    (25)

	.  reduce 25 (src line 294)


state 60
	args_decl:  args_decl COMMA T.PIDENTIFIER 

	PIDENTIFIER  shift 83
	.  error


state 61
	main:  PROGRAM IS declarations BEGIN commands END.    (5)

	.  reduce 5 (src line 114)


state 62
	declarations:  declarations COMMA PIDENTIFIER LBRACKET.NUM COLON NUM RBRACKET 

	NUM  shift 84
	.  error


state 63
	command:  identifier ASSIGN expression.SEMICOLON 

	SEMICOLON  shift 85
	.  error


state 64
	expression:  value.    (31)
	expression:  value.PLUS value 
	expression:  value.MINUS value 
	expression:  value.MULT value 
	expression:  value.DIVIDE value 
	expression:  value.MODULO value 

	PLUS  shift 86
	MINUS  shift 87
	MULT  shift 88
	DIVIDE  shift 89
	MODULO  shift 90
	.  reduce 31 (src line 349)


state 65
	command:  IF condition THEN.commands ELSE commands ENDIF 
	command:  IF condition THEN.commands ENDIF 

	IF  shift 24
	WHILE  shift 25
	REPEAT  shift 26
	FOR  shift 27
	READ  shift 29
	WRITE  shift 30
	PIDENTIFIER  shift 31
	.  error

	commands  goto 91
	command  goto 22
	identifier  goto 23
	proc_call  goto 28

state 66
	condition:  value EQUALS.value 

	NUM  shift 45
	PIDENTIFIER  shift 47
	.  error

	value  goto 92
	identifier  goto 46

state 67
	condition:  value NEQUALS.value 

	NUM  shift 45
	PIDENTIFIER  shift 47
	.  error

	value  goto 93
	identifier  goto 46

state 68
	condition:  value GE.value 

	NUM  shift 45
	PIDENTIFIER  shift 47
	.  error

	value  goto 94
	identifier  goto 46

state 69
	condition:  value LE.value 

	NUM  shift 45
	PIDENTIFIER  shift 47
	.  error

	value  goto 95
	identifier  goto 46

state 70
	condition:  value GEQ.value 

	NUM  shift 45
	PIDENTIFIER  shift 47
	.  error

	value  goto 96
	identifier  goto 46

state 71
	condition:  value LEQ.value 

	NUM  shift 45
	PIDENTIFIER  shift 47
	.  error

	value  goto 97
	identifier  goto 46

state 72
	command:  WHILE condition DO.commands ENDWHILE 

	IF  shift 24
	WHILE  shift 25
	REPEAT  shift 26
	FOR  shift 27
	READ  shift 29
	WRITE  shift 30
	PIDENTIFIER  shift 31
	.  error

	commands  goto 98
	command  goto 22
	identifier  goto 23
	proc_call  goto 28

state 73
	command:  REPEAT commands UNTIL.condition SEMICOLON 

	NUM  shift 45
	PIDENTIFIER  shift 47
	.  error

	condition  goto 99
	value  goto 44
	identifier  goto 46

state 74
	command:  FOR PIDENTIFIER FROM.value TO value DO commands ENDFOR 
	command:  FOR PIDENTIFIER FROM.value DOWNTO value DO commands ENDFOR 

	NUM  shift 45
	PIDENTIFIER  shift 47
	.  error

	value  goto 100
	identifier  goto 46

state 75
	command:  READ identifier SEMICOLON.    (17)

	.  reduce 17 (src line 213)


state 76
	command:  WRITE value SEMICOLON.    (18)

	.  reduce 18 (src line 220)


state 77
	proc_call:  PIDENTIFIER LPAREN args.RPAREN 
	args:  args.COMMA PIDENTIFIER 

	RPAREN  shift 101
	COMMA  shift 102
	.  error


state 78
	args:  PIDENTIFIER.    (30)

	.  reduce 30 (src line 341)


state 79
	identifier:  PIDENTIFIER LBRACKET PIDENTIFIER.RBRACKET 

	RBRACKET  shift 103
	.  error


state 80
	identifier:  PIDENTIFIER LBRACKET NUM.RBRACKET 

	RBRACKET  shift 104
	.  error


state 81
	declarations:  PIDENTIFIER LBRACKET NUM COLON.NUM RBRACKET 

	NUM  shift 105
	.  error


state 82
	procedures:  procedures PROCEDURE proc_head IS declarations BEGIN commands END.    (2)

	.  reduce 2 (src line 89)


state 83
	args_decl:  args_decl COMMA T PIDENTIFIER.    (26)

	.  reduce 26 (src line 304)


state 84
	declarations:  declarations COMMA PIDENTIFIER LBRACKET NUM.COLON NUM RBRACKET 

	COLON  shift 106
	.  error


state 85
	command:  identifier ASSIGN expression SEMICOLON.    (9)

	.  reduce 9 (src line 144)


state 86
	expression:  value PLUS.value 

	NUM  shift 45
	PIDENTIFIER  shift 47
	.  error

	value  goto 107
	identifier  goto 46

state 87
	expression:  value MINUS.value 

	NUM  shift 45
	PIDENTIFIER  shift 47
	.  error

	value  goto 108
	identifier  goto 46

state 88
	expression:  value MULT.value 

	NUM  shift 45
	PIDENTIFIER  shift 47
	.  error

	value  goto 109
	identifier  goto 46

state 89
	expression:  value DIVIDE.value 

	NUM  shift 45
	PIDENTIFIER  shift 47
	.  error

	value  goto 110
	identifier  goto 46

state 90
	expression:  value MODULO.value 

	NUM  shift 45
	PIDENTIFIER  shift 47
	.  error

	value  goto 111
	identifier  goto 46

state 91
	commands:  commands.command 
	command:  IF condition THEN commands.ELSE commands ENDIF 
	command:  IF condition THEN commands.ENDIF 

	IF  shift 24
	ELSE  shift 112
	ENDIF  shift 113
	WHILE  shift 25
	REPEAT  shift 26
	FOR  shift 27
	READ  shift 29
	WRITE  shift 30
	PIDENTIFIER  shift 31
	.  error

	command  goto 41
	identifier  goto 23
	proc_call  goto 28

state 92
	condition:  value EQUALS value.    (37)

	.  reduce 37 (src line 401)


state 93
	condition:  value NEQUALS value.    (38)

	.  reduce 38 (src line 411)


state 94
	condition:  value GE value.    (39)

	.  reduce 39 (src line 420)


state 95
	condition:  value LE value.    (40)

	.  reduce 40 (src line 429)


state 96
	condition:  value GEQ value.    (41)

	.  reduce 41 (src line 438)


state 97
	condition:  value LEQ value.    (42)

	.  reduce 42 (src line 447)


state 98
	commands:  commands.command 
	command:  WHILE condition DO commands.ENDWHILE 

	IF  shift 24
	WHILE  shift 25
	ENDWHILE  shift 114
	REPEAT  shift 26
	FOR  shift 27
	READ  shift 29
	WRITE  shift 30
	PIDENTIFIER  shift 31
	.  error

	command  goto 41
	identifier  goto 23
	proc_call  goto 28

state 99
	command:  REPEAT commands UNTIL condition.SEMICOLON 

	SEMICOLON  shift 115
	.  error


state 100
	command:  FOR PIDENTIFIER FROM value.TO value DO commands ENDFOR 
	command:  FOR PIDENTIFIER FROM value.DOWNTO value DO commands ENDFOR 

	TO  shift 116
	DOWNTO  shift 117
	.  error


state 101
	proc_call:  PIDENTIFIER LPAREN args RPAREN.    (20)

	.  reduce 20 (src line 239)


state 102
	args:  args COMMA.PIDENTIFIER 

	PIDENTIFIER  shift 118
	.  error


state 103
	identifier:  PIDENTIFIER LBRACKET PIDENTIFIER RBRACKET.    (46)

	.  reduce 46 (src line 480)


state 104
	identifier:  PIDENTIFIER LBRACKET NUM RBRACKET.    (47)

	.  reduce 47 (src line 490)


state 105
	declarations:  PIDENTIFIER LBRACKET NUM COLON NUM.RBRACKET 

	RBRACKET  shift 119
	.  error


state 106
	declarations:  declarations COMMA PIDENTIFIER LBRACKET NUM COLON.NUM RBRACKET 

	NUM  shift 120
	.  error


state 107
	expression:  value PLUS value.    (32)

	.  reduce 32 (src line 354)


state 108
	expression:  value MINUS value.    (33)

	.  reduce 33 (src line 363)


state 109
	expression:  value MULT value.    (34)

	.  reduce 34 (src line 372)


state 110
	expression:  value DIVIDE value.    (35)

	.  reduce 35 (src line 381)


state 111
	expression:  value MODULO value.    (36)

	.  reduce 36 (src line 390)


state 112
	command:  IF condition THEN commands ELSE.commands ENDIF 

	IF  shift 24
	WHILE  shift 25
	REPEAT  shift 26
	FOR  shift 27
	READ  shift 29
	WRITE  shift 30
	PIDENTIFIER  shift 31
	.  error

	commands  goto 121
	command  goto 22
	identifier  goto 23
	proc_call  goto 28

state 113
	command:  IF condition THEN commands ENDIF.    (11)

	.  reduce 11 (src line 162)


state 114
	command:  WHILE condition DO commands ENDWHILE.    (12)

	.  reduce 12 (src line 171)


state 115
	command:  REPEAT commands UNTIL condition SEMICOLON.    (13)

	.  reduce 13 (src line 179)


state 116
	command:  FOR PIDENTIFIER FROM value TO.value DO commands ENDFOR 

	NUM  shift 45
	PIDENTIFIER  shift 47
	.  error

	value  goto 122
	identifier  goto 46

state 117
	command:  FOR PIDENTIFIER FROM value DOWNTO.value DO commands ENDFOR 

	NUM  shift 45
	PIDENTIFIER  shift 47
	.  error

	value  goto 123
	identifier  goto 46

state 118
	args:  args COMMA PIDENTIFIER.    (29)

	.  reduce 29 (src line 335)


state 119
	declarations:  PIDENTIFIER LBRACKET NUM COLON NUM RBRACKET.    (24)

	.  reduce 24 (src line 279)


state 120
	declarations:  declarations COMMA PIDENTIFIER LBRACKET NUM COLON NUM.RBRACKET 

	RBRACKET  shift 124
	.  error


state 121
	commands:  commands.command 
	command:  IF condition THEN commands ELSE commands.ENDIF 

	IF  shift 24
	ENDIF  shift 125
	WHILE  shift 25
	REPEAT  shift 26
	FOR  shift 27
	READ  shift 29
	WRITE  shift 30
	PIDENTIFIER  shift 31
	.  error

	command  goto 41
	identifier  goto 23
	proc_call  goto 28

state 122
	command:  FOR PIDENTIFIER FROM value TO value.DO commands ENDFOR 

	DO  shift 126
	.  error


state 123
	command:  FOR PIDENTIFIER FROM value DOWNTO value.DO commands ENDFOR 

	DO  shift 127
	.  error


state 124
	declarations:  declarations COMMA PIDENTIFIER LBRACKET NUM COLON NUM RBRACKET.    (22)

	.  reduce 22 (src line 259)


state 125
	command:  IF condition THEN commands ELSE commands ENDIF.    (10)

	.  reduce 10 (src line 153)


state 126
	command:  FOR PIDENTIFIER FROM value TO value DO.commands ENDFOR 
